cabal-version: 3.0
name: vector-extras
version: 0.2.8.2
category: Vector
synopsis: Utilities for the "vector" library
description:
  This library is in an experimental state.
  Users should be prepared for frequent updates.

stability: Experimental
homepage: https://github.com/nikita-volkov/vector-extras
bug-reports: https://github.com/nikita-volkov/vector-extras/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2018, Metrix.AI
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: git://github.com/nikita-volkov/vector-extras.git

library
  hs-source-dirs: library
  default-extensions:
    Arrows
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
    UnboxedTuples

  default-language: Haskell2010
  exposed-modules:
    VectorExtras.Accumulator
    VectorExtras.Combinators
    VectorExtras.Generic
    VectorExtras.Generic.Mutable
    VectorExtras.Immutable

  -- TODO: Rearrange
  other-modules:
    VectorExtras.Basics.Generic
    VectorExtras.Combinators.Helpers
    VectorExtras.Prelude

  build-depends:
    base >=4.11 && <5,
    vector >=0.12 && <0.14,
