cabal-version: 3.4
name: vector-extras
version: 0.2.8.2
category: Vector
synopsis: Utilities for the "vector" library
description:
  This library is in an experimental state.
  Users should be prepared for frequent updates.

stability: Experimental
homepage: https://github.com/nikita-volkov/vector-extras
bug-reports: https://github.com/nikita-volkov/vector-extras/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2018, Metrix.AI
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: https://github.com/nikita-volkov/vector-extras

common base
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    ParallelListComp
    PatternGuards
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    VectorExtras.Accumulator
    VectorExtras.Combinators
    VectorExtras.Generic
    VectorExtras.Generic.Mutable

  other-modules:
    VectorExtras.Basics.Generic
    VectorExtras.Combinators.Helpers
    VectorExtras.Prelude

  build-depends:
    base >=4.11 && <5,
    vector >=0.12 && <0.14,
